--- a/Views/Sellers/Details.cshtml
+++ b/Views/Sellers/Details.cshtml
@@ -34,6 +34,12 @@
         <dd>
             @Html.DisplayFor(model => model.BirthDate)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Department)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Department.Name)
+        </dd>
     </dl>
 </div>
 <div>
